fix(components/viewport): display scrollbar only when hovering the viewport

--- a/projects/scion/components/viewport/_scrollbar.scss
+++ b/projects/scion/components/viewport/_scrollbar.scss
@@ -40,7 +40,7 @@
  * Invoke from within the viewport selector.
  */
 @mixin hide-when-inactive($theme: ()) {
-  &:not(:hover):not(:active) sci-scrollbar:not(.scrolling) {
+  &:host-context(:not(:hover):not(:active)) sci-scrollbar:not(.scrolling) { // use :host-context to work with shadow DOM, i.e., to select the shadow host of the shadow DOM
     opacity: 0; // do not use 'display' nor 'visibility' property to fade the scrollbar
   }
 }
